--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -54,7 +54,7 @@ config:
     page_title: 'Config'
     tab_menu:
         settings: 'Settings'
-        rss: 'RSS'
+        feed: 'Feeds'
         user_info: 'User information'
         password: 'Password'
         rules: 'Tagging rules'
@@ -85,19 +85,19 @@ config:
         help_reading_speed: "wallabag calculates a reading time for each article. You can define here, thanks to this list, if you are a fast or a slow reader. wallabag will recalculate the reading time for each article."
         help_language: "You can change the language of wallabag interface."
         help_pocket_consumer_key: "Required for Pocket import. You can create it in your Pocket account."
-    form_rss:
-        description: 'RSS feeds provided by wallabag allow you to read your saved articles with your favourite RSS reader. You need to generate a token first.'
-        token_label: 'RSS token'
+    form_feed:
+        description: 'Atom feeds provided by wallabag allow you to read your saved articles with your favourite Atom reader. You need to generate a token first.'
+        token_label: 'Feed token'
         no_token: 'No token'
         token_create: 'Create your token'
         token_reset: 'Regenerate your token'
-        rss_links: 'RSS links'
-        rss_link:
+        feed_links: 'Feed links'
+        feed_link:
             unread: 'Unread'
             starred: 'Starred'
             archive: 'Archived'
             all: 'All'
-        rss_limit: 'Number of items in the feed'
+        feed_limit: 'Number of items in the feed'
     form_user:
         two_factor_description: "Enabling two factor authentication means you'll receive an email with a code OR need to use an OTP app (like Google Authenticator, Authy or FreeOTP) to get a one time code on every new untrusted connection. You can't choose both option."
         name_label: 'Name'
@@ -372,7 +372,7 @@ quickstart:
         title: 'Configure the application'
         description: 'In order to have an application which suits you, have a look into the configuration of wallabag.'
         language: 'Change language and design'
-        rss: 'Enable RSS feeds'
+        feed: 'Enable feeds'
         tagging_rules: 'Write rules to automatically tag your articles'
     admin:
         title: 'Administration'
@@ -589,10 +589,10 @@ flashes:
             password_updated: 'Password updated'
             password_not_updated_demo: "In demonstration mode, you can't change password for this user."
             user_updated: 'Information updated'
-            rss_updated: 'RSS information updated'
+            feed_updated: 'Feed information updated'
             tagging_rules_updated: 'Tagging rules updated'
             tagging_rules_deleted: 'Tagging rule deleted'
-            rss_token_updated: 'RSS token updated'
+            feed_token_updated: 'Feed token updated'
             annotations_reset: Annotations reset
             tags_reset: Tags reset
             entries_reset: Entries reset
